# secure-model-delegation

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: challenge_freeze.json  oracle_policy.yaml
configs/: policy.yaml
data/: benchmark_cases.jsonl  regression_case_metadata.json  smd_bench_112_development_pilot.jsonl  smd_bench_1400.jsonl  smd_bench_1400_manifest.json  smd_bench_140_pilot.jsonl  smd_challenge_210.jsonl  smd_challenge_210_manifest.json  smd_egress_challenge_36.jsonl  smd_egress_challenge_36_manifest.json
data/review/: smd_bench_1400_human_review_sample.csv  smd_bench_1400_review_instructions.md  smd_bench_1400_review_summary.json  smd_bench_1400_second_reviewer_sample.csv  smd_challenge_210_human_review.csv  smd_challenge_210_review_instructions.md  smd_challenge_210_review_summary.json
docs/: evaluation-summary.md  final-evidence-freeze.md  pr3-implementation-notes.md  smd-bench-1400-methodology.md  target-profile-assurance.md  web-ui-demo-notes.md
docs/assets/: secure-model-delegation-architecture.html
docs/progress-reports/: README.md  progress-report-1.md  progress-report-2.md  progress-report-3.md  progress-report-4.md
scripts/: check_controller_freeze.py  export_pr4_evidence.py  generate_smd_bench.py  run_demo.py  run_eval.py  run_utility_sensitivity.py  run_web.py  smoke_web.py  summarize_human_review.py
src/smd_bench/: __init__.py  generator.py  (+5 more)
tests/: test_egress.py  test_gateway.py  test_hardening.py  test_policy_config.py  test_smd_bench.py  test_web_app.py
(+45 files in other folders)
