[project]
name = "cs6727-secure-model-delegation"
version = "0.1.0"
description = "Policy-bounded local-to-external AI delegation control prototype"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
    "PyYAML>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
